test_data/neg/ss/655288/Windows/655288.ss8_simp.rtf
>655288
MSYLVTIFSINAIGVVRRYDTTARSRTDAASVLIKYKAPRGYKFDRFELSRERSIFDVL
LLEEEEEEEEETTEEEEEEELLTLLLEEEEEEEEEEELLTTLEEEEEEEEELEEELLLL
